Add Organ Vat as a BillGiver Summary: Add a new organ vat that uses Bills. Make former organ vat non-buildable. Is save-compatible. ---------------------- Details: * Add new virtual class Building_GrowerBase_WorkTable * Add new organ vat 'Building_OrganVat' that derives from it * Add new Workgiver, JobDriver, Alert, and Jobs for new organ vat * Add opportunistic hauling to organ vat loading jobs * Move classes and defs no longer buildable to 'Legacy' folders

--- a/QEE/QEE.csproj
+++ b/QEE/QEE.csproj
@@ -55,15 +55,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AI\JobDriver_DepositIntoGrower.cs" />
+    <Compile Include="AI\JobDriver_ExtractProductFromGrower.cs" />
+    <Compile Include="AI\JobDriver_GrowerMaintenance.cs" />
+    <Compile Include="AI\JobDriver_LoadGrower.cs" />
     <Compile Include="AI\JobDriver_ExtractGrowerProduct.cs" />
     <Compile Include="AI\JobDriver_MaintainGrower.cs" />
     <Compile Include="AI\JobDriver_UseBrainTemplate.cs" />
     <Compile Include="AI\JobDriver_SalvageGenome.cs" />
     <Compile Include="AI\Properties\MaintainVatProperties.cs" />
+    <Compile Include="AI\WorkGiver_DoBill_Grower.cs" />
+    <Compile Include="AI\WorkGiver_ExtractProductFromGrower.cs" />
+    <Compile Include="AI\WorkGiver_GrowerMaintenance.cs" />
     <Compile Include="AI\WorkGiver_MaintainGrower.cs" />
     <Compile Include="AI\WorkGiver_GrowerExtractProduct.cs" />
     <Compile Include="AI\WorkGiver_GrowerOrderProcessor.cs" />
     <Compile Include="Alerts\Alert_GrowerMaintence.cs" />
+    <Compile Include="Alerts\Alert_MaintenanceLow.cs" />
     <Compile Include="CompatibilityTracker.cs" />
     <Compile Include="Compatibility\AlienRaceCompat.cs" />
     <Compile Include="Compatibility\GeneralCompatibility.cs" />
@@ -77,7 +84,8 @@
     <Compile Include="DefOfs\QEThoughtDefOf.cs" />
     <Compile Include="DefOfs\QEWorkTypeDefOf.cs" />
     <Compile Include="Defs\BackstoryDef.cs" />
-    <Compile Include="Defs\GrowerRecipeDef.cs" />
+    <Compile Include="Legacy\Legacy_GrowerRecipeDef.cs" />
+    <Compile Include="Legacy\Legacy_VatGrower.cs" />
     <Compile Include="Logic\ComparableSkillRecord.cs" />
     <Compile Include="Logic\ExposedTraitEntry.cs" />
     <Compile Include="Logic\IMaintainableGrower.cs" />
@@ -97,9 +105,9 @@
     <Compile Include="Things\Building_GrowerBase.cs" />
     <Compile Include="Things\Building_GrowerBase_WorkTable.cs" />
     <Compile Include="Things\Building_PawnVatGrower.cs" />
-    <Compile Include="Things\Building_VatGrower.cs" />
     <Compile Include="Things\Building_OrganVat.cs" />
     <Compile Include="Things\GenomeSequence.cs" />
+    <Compile Include="Things\Properties\RecipeGraphicProperties.cs" />
     <Compile Include="Things\Properties\RecipeOutcomeProperties.cs" />
     <Compile Include="Things\Properties\GrowerProperties.cs" />
     <Compile Include="Things\Properties\VatGrowerProperties.cs" />
