--- a/QEE/QEE.csproj
+++ b/QEE/QEE.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Workers\PawnRelationWorker_SiblingCloneCheck.cs" />
     <Compile Include="Workers\RecipeWorker_CreateBrainScan.cs" />
     <Compile Include="Workers\RecipeWorker_GenomeSequencing.cs" />
+    <Compile Include="Workers\RecipeWorker_InstallNaturalBodyPart.cs" />
     <Compile Include="Workers\RecipeWorker_NerveStapling.cs" />
   </ItemGroup>
   <ItemGroup />
