--- a/QEE/QEE.csproj
+++ b/QEE/QEE.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QEthics</RootNamespace>
-    <AssemblyName>QuestionableEthicsEnhanced</AssemblyName>
+    <AssemblyName>QuestionableEthicsPlus</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
