--- a/Questionable Ethics Plus.csproj
+++ b/Questionable Ethics Plus.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include=".github\ISSUE_TEMPLATE\bug_report.md" />
     <None Include=".github\ISSUE_TEMPLATE\compatibility-request.md" />
     <None Include=".github\ISSUE_TEMPLATE\feature_request.md" />
@@ -159,6 +160,7 @@
     <Content Include="1.3\Patches\Patch_Organs.xml" />
     <Content Include="1.3\Patches\Patch_Relations.xml" />
     <Content Include="1.3_Ideology\Patches\Ideology_Features.xml" />
+    <Content Include="1.3_Ideology\Precepts\QE_NerveStaplingPrecepts.xml" />
     <Content Include="LoadFolders.xml" />
     <Content Include="About\About.xml" />
     <Content Include="About\Manifest.xml" />
@@ -229,6 +231,7 @@
     <Content Include="Textures\Things\Item\Resource\ProteinMash.png" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="1.3_Ideology\PatchOperationdoIdeoFeatures.cs" />
     <Compile Include="1.3_Ideology\QEE_HediffCompProperties_CyberSuppressed.cs" />
     <Compile Include="1.3_Ideology\QEE_HediffComp_CyberSuppresed.cs" />
     <Compile Include="1.3_Ideology\RecipeWorker_NerveStapling_Ideology.cs" />
