--- a/Questionable Ethics Plus.csproj
+++ b/Questionable Ethics Plus.csproj
@@ -34,8 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Lib.Harmony.2.1.1\lib\net35\0Harmony.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\Lib.Harmony.2.1.1\lib\net472\0Harmony.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="AlienRace">
       <HintPath>..\..\..\..\workshop\content\294100\839005762\1.3\Assemblies\AlienRace.dll</HintPath>
@@ -101,7 +101,6 @@
     <None Include=".vs\QEE\v16\.suo" />
     <None Include=".vs\QuestionableEthicsEnhanced\v16\.suo" />
     <None Include=".vs\slnx.sqlite" />
-    <None Include=".vs\VSWorkspaceState.json" />
     <None Include="Docs\QE_Legacy_Save_Instructions.md" />
     <None Include="packages.config" />
     <None Include="packages\Lib.Harmony.2.1.1\.signature.p7s" />
@@ -122,11 +121,11 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="1.3\Assemblies\QuestionableEthicsEnhanced.dll" />
     <Content Include="1.3\Defs\HediffDefs\Hediffs_Clone.xml" />
     <Content Include="1.3\Defs\HediffDefs\Hediffs_NeuralDisruption.xml" />
     <Content Include="1.3\Defs\HediffDefs\Hediffs_Cyberslaving.xml" />
     <Content Include="1.3\Defs\HediffDefs\Hediffs_Rejection.xml" />
+    <Content Include="1.3\Defs\HistoryTypeDefs\HistoryEventDefs.xml" />
     <Content Include="1.3\Defs\JobDefs\Jobs_Cloning.xml" />
     <Content Include="1.3\Defs\JobDefs\Jobs_Grower.xml" />
     <Content Include="1.3\Defs\LegacyDefs\Legacy_Recipes.xml" />
@@ -162,9 +161,8 @@
     <Content Include="1.3\Patches\Patch_Compatibility_TiberiumRim.xml" />
     <Content Include="1.3\Patches\Patch_Organs.xml" />
     <Content Include="1.3\Patches\Patch_Relations.xml" />
-    <Content Include="1.3_Ideology\HistoryEventDefs.xml" />
     <Content Include="1.3_Ideology\Patches\Ideology_Features.xml" />
-    <Content Include="1.3_Ideology\Precepts\QE_NerveStaplingPrecepts.xml" />
+    <Content Include="1.3\Defs\PreceptDefs\QE_NerveStaplingPrecepts.xml" />
     <Content Include="LoadFolders.xml" />
     <Content Include="About\About.xml" />
     <Content Include="About\Manifest.xml" />
@@ -238,6 +236,7 @@
     <Compile Include="1.3_Ideology\Patches\PatchOperationdoIdeoFeatures.cs" />
     <Compile Include="1.3_Ideology\Hediffs\QEE_HediffCompProperties_CyberSuppressed.cs" />
     <Compile Include="1.3_Ideology\Hediffs\QEE_HediffComp_CyberSuppresed.cs" />
+    <Compile Include="1.3_Ideology\PreceptComps\PreceptComp_NerveStaple.cs" />
     <Compile Include="1.3_Ideology\RecipeWorker_NerveStapling_Ideology.cs" />
     <Compile Include="QEE\AI\JobDriver_DepositIntoGrower.cs" />
     <Compile Include="QEE\AI\JobDriver_ExtractGrowerProduct.cs" />
@@ -257,6 +256,7 @@
     <Compile Include="QEE\AI\WorkGiver_MaintainGrower.cs" />
     <Compile Include="QEE\Alerts\Alert_GrowerMaintence.cs" />
     <Compile Include="QEE\Alerts\Alert_MaintenanceLow.cs" />
+    <Compile Include="QEE\DefOfs\QEHistoryDefsOf.cs" />
     <Compile Include="QEE\Legacy\Legacy_GrowerRecipeDef.cs" />
     <Compile Include="QEE\Legacy\Legacy_VatGrower.cs" />
     <Compile Include="QEE\ModSettings.cs" />
@@ -320,6 +320,7 @@
   <ItemGroup>
     <Folder Include=".git\objects\info\" />
     <Folder Include=".git\refs\tags\" />
+    <Folder Include="1.3\Assemblies\" />
     <Folder Include="Assemblies\" />
     <Folder Include="QEE\Legacy\.vs\Legacy\v16\" />
     <Folder Include="QEE\obj\Debug\TempPE\" />
