--- a/Source/QEE/QEthics.csproj
+++ b/Source/QEE/QEthics.csproj
@@ -6,7 +6,7 @@
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <DebugType>None</DebugType>
     <LangVersion>latest</LangVersion>
-    <FileVersion>1.3.4</FileVersion>
+    <FileVersion>1.3.5</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
@@ -22,6 +22,11 @@
       <HintPath>..\..\..\..\..\..\workshop\content\294100\839005762\1.3\Assemblies\AlienRace.dll</HintPath>
       <CopyLocal>False</CopyLocal>
       <Private>false</Private>
+    </Reference>
+    <Reference Include="FacialAnimation">
+      <HintPath>..\..\..\..\..\..\workshop\content\294100\1635901197\1.3\Assemblies\FacialAnimation.dll</HintPath>
+	    <CopyLocal>False</CopyLocal>
+	    <Private>false</Private>
     </Reference>
     <PackageReference Include="Mlie_Rimworld_VersionFromManifest" Version="*" />
   </ItemGroup>
