--- a/Source/QEE/QEthics.csproj
+++ b/Source/QEE/QEthics.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputPath>..\..\1.3\Assemblies</OutputPath>
+    <OutputPath>..\..\1.4\Assemblies</OutputPath>
     <TargetFramework>net48</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <DebugType>None</DebugType>
     <LangVersion>latest</LangVersion>
-    <FileVersion>1.3.6</FileVersion>
+    <FileVersion>1.4.1</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
@@ -18,21 +18,28 @@
       <Version>*</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="Mlie_Rimworld_VersionFromManifest" Version="*" />
     <Reference Include="AlienRace">
-      <HintPath>..\..\..\..\..\..\workshop\content\294100\839005762\1.3\Assemblies\AlienRace.dll</HintPath>
-      <CopyLocal>False</CopyLocal>
-      <Private>false</Private>
+	    <HintPath>..\..\..\..\..\..\workshop\content\294100\839005762\1.4\Assemblies\AlienRace.dll</HintPath>
+	    <CopyLocal>False</CopyLocal>
+	    <Private>false</Private>
     </Reference>
     <Reference Include="AnimalGenetics">
-      <HintPath>..\..\..\AnimalGenetics\1.3\Assemblies\AnimalGenetics.dll</HintPath>
+      <HintPath>..\..\..\AnimalGenetics\1.4\Assemblies\AnimalGenetics.dll</HintPath>
 	    <CopyLocal>False</CopyLocal>
 	    <Private>false</Private>
     </Reference>
     <Reference Include="FacialAnimation">
-      <HintPath>..\..\..\..\..\..\workshop\content\294100\1635901197\1.3\Assemblies\FacialAnimation.dll</HintPath>
-      <CopyLocal>False</CopyLocal>
-      <Private>false</Private>
+	    <HintPath>..\..\..\..\..\..\workshop\content\294100\1635901197\1.4\Assemblies\FacialAnimation.dll</HintPath>
+	    <CopyLocal>False</CopyLocal>
+	    <Private>false</Private>
     </Reference>
-    <PackageReference Include="Mlie_Rimworld_VersionFromManifest" Version="*" />
+    <PackageReference Include="Krafs.Publicizer" Version="*">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+	<ItemGroup>
+		<Publicize Include="Assembly-CSharp" />
+	</ItemGroup>
 </Project>
